<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_expend_selected"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:background="@drawable/item_pressed_bg"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_expenses" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@id/iv_1"
            android:text="@string/zhichu"
            android:textColor="@color/line_or_circle_or_chart_text_heavy_gray"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_expend_selected"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/auto_tally_selected_icon" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="50dp"
        android:background="@color/line_gray2" />

    <RelativeLayout
        android:id="@+id/rl_income_selected"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:background="@drawable/item_pressed_bg"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_income" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@id/iv_2"
            android:text="@string/shouru"
            android:textColor="@color/line_or_circle_or_chart_text_heavy_gray"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_income_selected"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/auto_tally_selected_icon"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>