<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/sky_blue_like">

    <TextView
        android:id="@+id/tv_date_type_choose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@drawable/text_view_click_bg"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_category_choose"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_type_choose_title">

        <RadioButton
            android:id="@+id/rb_week_chart_frag"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_week_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/tv_week_chart_frag_string"
            android:textColor="@drawable/selector_text_color" />

        <RadioButton
            android:id="@+id/rb_month_chart_frag"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_month_bg"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/tv_month_chart_frag_string"
            android:textColor="@drawable/selector_text_color" />

        <RadioButton
            android:id="@+id/rb_year_chart_frag"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_year_bg"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/tv_year_chart_frag_string"
            android:textColor="@drawable/selector_text_color" />

    </RadioGroup>

    <android.support.design.widget.TabLayout
        android:id="@+id/tb_date_choose"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_category_choose"
        app:tabIndicatorColor="@color/tab_selected_color"
        android:background="@color/system_white"
        app:tabIndicatorFullWidth="false"
        app:tabMode="scrollable"
        app:tabPaddingEnd="20dp"
        app:tabPaddingStart="20dp"
        app:tabSelectedTextColor="@color/tab_selected_color"
        app:tabTextAppearance="@style/TabLayoutStyle"
        app:tabTextColor="@color/tab_unselected_color" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_date_choose" />
</android.support.constraint.ConstraintLayout>